# AutoSOCKS

./: .gitignore  README.md  autosocks  install.sh  pyproject.toml
src/autosocks/: __init__.py  __main__.py  cli.py
src/autosocks/core/: config.py  dns.py  errors.py  output.py  service.py  tunnel.py
src/autosocks/plugins/: env.py  geo.py  health.py  profile.py  proxy.py  shell_integration.py  update.py  webhook.py
src/autosocks/plugins/tui/: __init__.py  app.py  beautify.py  dashboard.py  menu.py
tests/: autosocks-region8.bats  design-spec.md  tdd-fixes.bats  test_cli.py  test_config.py  test_dns.py  test_env.py  test_errors.py  test_geo.py  test_health.py  test_output.py  test_profile.py  test_proxy.py  test_service.py  test_shell_integration.py  test_tui_app.py  test_tui_beautify.py  test_tui_dashboard.py  test_tui_menu.py  test_tunnel.py  test_update.py  test_webhook.py
